--- a/index.html
+++ b/index.html
@@ -25,5 +25,6 @@
       laboriosam officia? Corrupti, amet ea at magni laudantium porro eveniet
       dolore quisquam laborum recusandae.
     </p>
+    <p>lần 2</p>
   </body>
 </html>
